--- a/final_project/art_project/app/views/posts/show.html.erb
+++ b/final_project/art_project/app/views/posts/show.html.erb
@@ -14,6 +14,10 @@
 	  <strong>Author:</strong>
 	  <%= @post.user.first_name+ ' '+ @post.user.last_name%> 
 	</p>
+	<p>
+	  <strong>Created:</strong>
+	  <%= @post.created_at%> 
+	</p>
 
 	<p>
 	  <strong>Content:</strong>
@@ -21,17 +25,22 @@
 	</p>
 	
 	<!-- Show on same page the comment added by the public. -->
-	<h3>Comments:</h3>
-	<% @post.comments.each do |comment| %>
-   
-  <strong>comment added:</strong><%= time_ago_in_words(comment.created_at) %><spam> ago</spam><br>
-  
-  <strong>Commenter:</strong><spam><%= comment.commenter %><spam><br>
-   <strong>Text:</strong><%= comment.body %><br><br>
+	
+	<%if @post.comments.present?%>
+		<h4>Comments:</h4>
+		<% @post.comments.each do |comment| %>
+		<strong>comment added:</strong><%= time_ago_in_words(comment.created_at) %><spam> ago</spam><br>
+ 		<strong>Commenter:</strong><spam><%= comment.commenter %><spam><br>
+   		<strong>Text:</strong><%= comment.body %><br><br>
   <% end%>
+	<% else%>
+		<p>There are no comments. Be the first to comment this post.</p>
+	<% end %>
+   
+  
 <!--The form_for call here uses an array -->
 	
-	<h4>Add a comment:</h4>
+	<h5>Add a comment:</h5>
 		<%= form_for([@post, @post.comments.build]) do |f| %>
   <p>
     <%= f.label :Name %><br>
