--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -1,6 +1,15 @@
 
 
-<h1>Listing Events</h1>
+<%= form_tag '/events', :method => 'get',class: "navbar-form" do %>
+  <div class="input-append">
+    <%= text_field_tag :search_event, params[:search_event ], class: "span2", placeholder: "Search by Title" %>
+    <%= text_field_tag :search_location, params[:search_location], class: "span2", placeholder: "Search by Location" %>
+    <%= text_field_tag :search_date, params[:search_date], class: "span2", placeholder: "Search by Date" %>
+    <button class="btn" type="submit"><i class="icon-search">Search</i></button>
+  </div>
+<% end %>
+
+<h4>Listing Events</h4>
 
  <% if @events.count>0 %>
   <table>
@@ -36,7 +45,7 @@
     </tbody>
   </table>  
     <% else%>
-      <p>Sorry, there are not events at this moment.</p>
+      <p>Sorry, there are no events.</p>
         <!-- Only admin can modify, destroy and create events. -->
     <% end %>
 
