--- a/final_project/art_project/app/views/posts/index_all.html.erb
+++ b/final_project/art_project/app/views/posts/index_all.html.erb
@@ -1,11 +1,10 @@
 
 <p id="notice"><%= notice %></p>
-<h3>Search by title,date and author</h3>
 
 <%= form_tag '/posts', :method => 'get',class: "navbar-form" do %>
 	<div class="input-append">
-    <%= text_field_tag :search_title, params[:search_title ], class: "span2", placeholder: "Search Posts" %>
-    <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Author" %>
+    <%= text_field_tag :search_title, params[:search_title ], class: "span2", placeholder: "Search Posts by Title" %>
+    <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Post by Author" %>
     <button class="btn" type="submit"><i class="icon-search">Search</i></button>
   </div>
 <% end %>
@@ -14,16 +13,20 @@
 
 
 <%counter=1%>
-<% @posts_title.each do |post| %>
-  <div class="post">
-    <h4 class="post-title"><%=counter%>.<%= link_to post.title, post %></h4>
-	<%if post.user%>
-    <h6 class="post-author">Author:<%=  post.user.first_name%></h6>
-  <% else %>
-  	<h6>Guest</h6>
-  <% end %>
-    <%counter+=1%>
-  </div>
+<%if @posts_title.present?%>
+	<% @posts_title.each do |post| %>
+	  <div class="post">
+	    <h4 class="post-title"><%=counter%>.<%= link_to post.title, post %></h4>
+		<%if post.user%>
+	    <h6 class="post-author">Author:<%=  post.user.first_name%></h6>
+	  <% else %>
+	  	<h6>Guest</h6>
+	  <% end %>
+	    <%counter+=1%>
+	  </div>
+	<% end %>
+<% else%>
+	<p>No post match your search.</p>
 <% end %>
 
 
