--- a/final_project/art_project/app/views/events/index.html.erb
+++ b/final_project/art_project/app/views/events/index.html.erb
@@ -1,10 +1,20 @@
-
-
+<p id="notice"><%= notice %></p>
+<p>Events searcher:</p>
 <%= form_tag '/events', :method => 'get',class: "navbar-form" do %>
   <div class="input-append">
     <%= text_field_tag :search_event, params[:search_event ], class: "span2", placeholder: "Search by Title" %>
     <%= text_field_tag :search_location, params[:search_location], class: "span2", placeholder: "Search by Location" %>
-    <%= text_field_tag :search_date, params[:search_date], class: "span2", placeholder: "Search by Date" %>
+    <%#= text_field_tag :search_date, params[:search_date], class: "span2", placeholder: "Search by Date" %>
+  <select name="drop_date">
+    <option value="" selected="selected">Search by date</option>
+    <option value="Today">Today</option>
+    <option value="Tomorrow">Tomorrow</option>
+    <option value="This week">This week</option>
+    <option value="This month">This month</option>
+    <option value="All dates">All dates</option>
+</select>
+
+
     <button class="btn" type="submit"><i class="icon-search">Search</i></button>
   </div>
 <% end %>
